@@ -3,22 +3,20 @@ Hash: SHA512
 
 DIST gnutls-2.12.18.tar.bz2 7207965 RMD160 c5c5bb91f374edd7bfa63c2b2b19ea7606353d17 SHA1 cd5cf0932575b758ad3ee89952763a8395ea4af0 SHA256 780b12e3f05191316390611a3d9d982d29ca3f3abc234517b2fc542064b6f07a
 DIST gnutls-2.12.19.tar.bz2 7208159 RMD160 077d62ab00780a6798cee92e80d542f1e74891f2 SHA1 643620216ba54b195e41e29abfdcc31125f92d25 SHA256 8f167b39de4e2fddd83f7e29c98ce2e7fc76f4d79ccf4d3d66d1379b971160ec
-DIST gnutls-3.0.19.tar.xz 5035160 RMD160 ac9a4c41796f4eea4640c7e452a33ee5c3706733 SHA1 df55f60a0426de1f0efb5c1a902e209b069b3d51 SHA256 d9a436ea8718c38a564812e465c883f4f37ddc8c80c6f8bee54819e6e4089c37
 DIST gnutls-3.0.20.tar.xz 4426520 RMD160 a775877a7dec4e10a5612dc0ebb71d59f78ead39 SHA1 0c65f6a1e669c0fe85ddb2d645078b3bce9d1518 SHA256 7e3f431a43e5366ff5a9b7646d2a79892a905237ef18cb147b945ec99012686d
 EBUILD gnutls-2.12.18.ebuild 3267 RMD160 2c3ae21f47d7d4fc590fc580d2cd67e1bbc26266 SHA1 154468c7f58ae4ba0c7d1048f9131ee013d1adf2 SHA256 3cca5cf44ad3420d8450403849d6336ea1d43909474412d9402a9f74d13ce99a
 EBUILD gnutls-2.12.19.ebuild 3394 RMD160 6bc593c18d208a76e739db5455f705b83c6bb3ca SHA1 911367bdb9195f29fe3cee8a95765b570e75531e SHA256 ece8494fee1cb0b224605603f2c336fa4d6b000b52fc5cce57b4395e74925bcf
-EBUILD gnutls-3.0.19.ebuild 2879 RMD160 7ca8bb86ed7008b900ef2c732b560486fdef478c SHA1 75b196727299462cfd89d33658bb1babcc5b7182 SHA256 0fcb0dd7a1755e67bcdf9bcc63e77aac3e8f5eb3e9f47d80a94ea1228b43e9c1
 EBUILD gnutls-3.0.20.ebuild 2919 RMD160 97911742d0bd31a1fbc8bdb97cc050bb561023d9 SHA1 3b79d208547cdbcbd28da48e2a7be9ec9719d5a0 SHA256 f401f21881da92186e9505386d8f8a8f07cf2f83567480c0dee0e9e8fd8f6931
-MISC ChangeLog 54241 RMD160 3b96623c2faad3b0628ee5ffb8ab3b2378e16877 SHA1 5d17bb5ea879351db5f814a63a0ed6900f5554c6 SHA256 bdb612e7851c3ac7ee21359d0913619769fba9f4fe7171b0a7f3d7b7028050fc
+MISC ChangeLog 54328 RMD160 7389727c498949e743b77fdd72045cddba0e696f SHA1 9365102266963e11393b9d2662424b7056f00af7 SHA256 53e8afe94ed0fb625ba35228ece1c1d7a18d65bfa7c6e869ea93b833e274d562
 MISC metadata.xml 340 RMD160 e973767590edb923f2828ef545293617b4b19554 SHA1 e42964b82af04a3d6de8307186a33d18a12af326 SHA256 a2bf9aefe44513df9e611a974c08d7f26b987c0c48c134a0d6f5177ca6a8676d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJP1C+fAAoJEEqz6FtPBkyjHssH/jTgzyKGPfv34/xbvquVrH/T
-BE+bXSxtvlU6iXAIyXTBrhwUSimCX5EuqTSbyttIz/v7sLafuT+FUgU+B0PPd4LA
-9gHKAY4gq71sEGOCzK7tzO0tZV0lz3J9knNaiBjeBuqKjdZdsHdY1S9JZ9KgxQlu
-3c2etcFpHCaFxLH/wJ+kqUCKZOFDGPeaoCjUqFmxszpzbvhTb3NL4hPZ9qxbB3PQ
-dO4vdIBqOqzO4ATAXwbvKjphdjSP3Zy2/aNb9YGkM68XOrcw5uM7ZXIwTVW/pVl/
-qAPaiV019POt0U5xYsq080zw6Rb1sergUaS3VFTGWskwanabwqHtfCFmnJnLdLg=
-=TdJe
+iQEcBAEBCgAGBQJP1DAgAAoJEEqz6FtPBkyjU4wH/1R5YjTIWOllig4xzGvifffq
+e6jAhzHQHNMWukq6Vaa52ej6pPaHcSxnVZk+lWVMdag+0TA/42GRbcsHtF+rZbst
+eJ+fDGmHfp2m79Wm198zP8EaoVmke1acI+nEXHJxGLmc9AuEDRJdhhHyr0WENj91
+mKsCeZAU7Rv1MGxrynJTl2tnaZ7yc3hHII/q6frrDlBU38UN6wTEbb00bTZ4dyL2
+YwOmHz4YBqWWLYLQuRd4YQkeyXAP+MH6lIOezqdMREkyFVJ5ejhcvxug1OFRcqlz
+ubqrgdoSupmp7W3ZiBXs1AuSePG+F2NU5Mfi6XevdrIIAarmkBhNnDgvKT5NBQg=
+=KAOl
 -----END PGP SIGNATURE-----
