@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.368 2012/06/10 05:24:41 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.369 2012/06/10 05:26:49 radhermit Exp $
+
+  10 Jun 2012; Tim Harder <radhermit@gentoo.org> -gnutls-3.0.19.ebuild:
+  Remove old.
 
   10 Jun 2012; Tim Harder <radhermit@gentoo.org> gnutls-2.12.18.ebuild,
   gnutls-2.12.19.ebuild:
